Correção do csproj, pasta beneficiario n referenciada

--- a/FI.WebAtividadeEntrevista/FI.WebAtividadeEntrevista.csproj
+++ b/FI.WebAtividadeEntrevista/FI.WebAtividadeEntrevista.csproj
@@ -349,6 +349,7 @@
     <Content Include="Scripts\jtable\themes\metro\pink\jtable.less" />
     <Content Include="Scripts\jtable\themes\metro\purple\jtable.less" />
     <Content Include="Scripts\jtable\themes\metro\red\jtable.less" />
+    <Content Include="Views\Beneficiario\Modal.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\themes\base\minified\images\" />
