Correção de barreira da validação CPF em alterar cliente

--- a/FI.AtividadeEntrevista/FI.AtividadeEntrevista.csproj
+++ b/FI.AtividadeEntrevista/FI.AtividadeEntrevista.csproj
@@ -55,7 +55,7 @@
     <Content Include="DAL\Beneficiarios\Procedures\FI_SP_AltBeneficiario.sql" />
     <Content Include="DAL\Beneficiarios\Procedures\FI_SP_ConsBeneficiario.sql" />
     <Content Include="DAL\Beneficiarios\Procedures\FI_SP_DelBeneficiario.sql" />
-    <Content Include="DAL\Clientes\Procedures\FI_SP_ValCPFCliente.sql" />
+    <Content Include="DAL\Clientes\Procedures\FI_SP_ValCliente.sql" />
     <Content Include="DAL\Beneficiarios\Procedures\FI_SP_IncBeneficiario.sql" />
     <Content Include="DAL\Clientes\Procedures\FI_SP_AltCliente.sql" />
     <Content Include="DAL\Clientes\Procedures\FI_SP_ConsCliente.sql" />
